<resources>
    <string name="app_name">PracticeFirebase</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="click_here_to_register">Click here to Register</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register_here">Register Here</string>
    <string name="username_use_e_mail_id">Username (use e-mail id)</string>
    <string name="pass">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="click_here_to_login">Click here to Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="title_activity_maps">Map</string>
</resources>
